--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-vuex-like",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "write react component like vue",
   "keywords": [
     "react-vue-like",
@@ -9,20 +9,24 @@
     "vue"
   ],
   "sideEffects": false,
+  "main": "es/index.js",
   "module": "esm/index.js",
+  "typings": "types/index.d.ts",
   "engines": {
     "node": "> 6.9.1"
   },
   "files": [
     "dist",
-    "build",
     "esm",
-    "preset",
-    "loader",
-    "postcss"
+    "es",
+    "src",
+    "types"
   ],
   "scripts": {
-    "build": "babel src -d esm",
+    "build": "npm run build:types && npm run build:js && npm run build:es",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "cross-env BUILD_ENV=js babel src -d esm --extensions \".ts,.tsx\" --source-maps",
+    "build:es": "cross-env BUILD_ENV=es babel src -d es --extensions \".ts,.tsx\"",
     "prepare": "npm run build"
   },
   "repository": {
@@ -31,6 +35,8 @@
   },
   "author": "gxlmyacc",
   "dependencies": {
+    "mobx": "^4.13.0",
+    "mobx-react": "^6.1.3"
   },
   "peerDependencies": {
     "core-js": ">=2",
@@ -38,17 +44,17 @@
     "mobx-react": "^6.1.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/cli": "^7.7.5",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
+    "@babel/plugin-proposal-numeric-separator": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-arrow-functions": "^7.2.0",
     "@babel/plugin-transform-destructuring": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
@@ -56,8 +62,14 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/plugin-transform-strict-mode": "^7.2.0",
-    "@babel/preset-env": "7.4.5",
+    "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.7.4",
+    "@types/node": "^13.1.0",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
@@ -70,6 +82,7 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.0"
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "typescript": "^3.7.3"
   }
 }
