optimize type definition

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-vuex-like",
-  "version": "0.0.5",
+  "version": "0.0.6-alpha.0",
   "description": "write react component like vue",
   "keywords": [
     "react-vue-like",
